syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package oms;

service OrderService {
    rpc List(google.protobuf.Empty) returns (ListOrdersResponse) {}
    rpc Create(CreateOrderRequest) returns (CreateOrderResponse) {}
}

message Order {
    string id = 1;
    string customer_id = 2;
    int32 total_price = 3;
    repeated OrderItem order_items = 4;
    google.protobuf.Timestamp created_at = 5;
}

message OrderItem {
    string product_id = 1;
    int32 qty = 2;
}

message ListOrdersResponse {
    repeated Order orders = 1;
}

message CreateOrderRequest {
    string customer_id = 1;
    repeated OrderItem orderItems = 2;
}

message CreateOrderResponse {
   Order order = 1;
}